<resources>
    <string name="app_name">Advanced</string>
    <string name="lan_english">English</string>
    <string name="lan_russian">Russian</string>
    <string name="lan_uzbek">Uzbek</string>
    <string name="lan_chinese">Chinese</string>
    <string name="lan_japanese">Japanese</string>
    <string name="lan_korean">Korean</string>

    <plurals name="my_cats">
        <item quantity="one">I have %s cat</item>
        <item quantity="other">I have %s cats</item>
    </plurals>
  <!--  <string name="title_activity_timber" translatable="false">TimberActivity</string>
     Strings used for fragments for navigation
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_loading" translatable="false">LoadingActivity</string>

    <string name="loading" translatable="false">loading</string>
    <string name="submit" translatable="false">submit</string>  -->
</resources>