<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/b_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_english"/>
    <Button
        android:id="@+id/b_russian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_russian"/>
    <Button
        android:id="@+id/b_uzbek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_uzbek"/>
    <Button
        android:id="@+id/b_chinese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_chinese"/>
    <Button
        android:id="@+id/b_japanese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_japanese"/>
    <Button
        android:id="@+id/b_korean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_korean"/>
</LinearLayout>